--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,15 @@
     <string name="save_header">Guardar</string>
     <string name="save_summary_off">El vídeo final encriptado no se almacenará en el dispositivo</string>
     <string name="save_summary_on">El vídeo final encriptado  se almacenará en el dispositivo</string>
+    <string name="loginbutton">loginbutton</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="login_summary">Inicia sesión en Google Drive para que tus videos se almacenen en esta plataforma de forma segura.</string>
 </resources>
