Sube a file.io si es menor de 100MB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="login_summary">Inicia sesión en Google Drive para que tus videos se almacenen en esta plataforma de forma segura.</string>
     <string name="file_created">Se ha creado</string>
     <string name="file_create_error">Error</string>
+    <string name="fileio_summary">Preferentemente de corta duración. El video se subirá si su tamaño es menor de 100MB.</string>
 </resources>
