--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">camera</string>
+    <string name="app_name">Safe Camera</string>
 
     <!-- Preference Titles -->
 
